@@ -574,9 +574,10 @@ encapsulated postscript, with an optional latex container file.
 </ul>
 
 <ul>
-<li><a href="http://users.bit.net.au/~bhepple/dcalc/index.html">gdcalc</a>
-- a GTK+ Reverse Polish Notation (RPN) calculator for Unix and Linux with
-stats, financial, programming and scientific functions.
+<li><a href="http://www.geocities.com/bob_hepple/dcalc/index.html">gdcalc</a>
+- a GLADE/GTK+ Reverse Polish Notation (RPN - HP-like) and
+algebraic (conventional = Texas/Casio-like) calculator for Unix and Linux
+with stats, financial, programming and scientific functions.
 </ul>
 
 <ul>
@@ -731,6 +732,15 @@ an IM client for Unix based platforms, packed with unmatched security features
 such as RSA Public Key encryption and IDEA encryption.
 </ul>
 
+<ul>
+<li><a href="http://www.stoq.com.br/release_en.php">Stoq</a> -
+retail business management software (GPL'ed).
+</ul>
+
+<ul>
+<li><a href="http://www.icebreaker.net/gnomersvp/">GnomeRSVP</a> -
+a Rapid Serial Visual Projector for computer assisted speed reading.
+</ul>
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
