@@ -1,3 +1,7 @@
+2002-03-27  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added Stoq and GnomeRSVP.
+
 2002-03-18  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: updated gdcalc.
